fix buttons on mobile mode

--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -152,7 +152,7 @@
     display: flex;
     justify-content: center;
 
-    @media (min-width: 601px) {
+    @media (min-width: 768px) {
       border-top: 1px solid #eee;
       padding-top: 15px;
     }
