--- a/src/sass/_google-button.scss
+++ b/src/sass/_google-button.scss
@@ -2,7 +2,7 @@
   flex: 1 1 1px;
   cursor: pointer;
 
-  @media(min-width: 600px) {
+  @media(min-width: 768px) {
     .en & {
       width: 236px;
       max-width: 236px;
